cargo-features = ["per-package-target"]

[package]
name = "engine_controller"
version = "0.1.0"
edition = "2021"
default-target = "thumbv7em-none-eabihf"

[profile.dev]
panic = "abort"
debug = true
opt-level = 1
lto = false
codegen-units = 1
incremental = false

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
debug = true
lto = true
incremental = false

[dependencies]
# Only set the critical section feature, if you are using a bare-metal platform
# without any RTOS
# See https://github.com/rust-embedded/critical-section for further details.
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
# Panic behavior, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xe"] }
bxcan = "0.7.0"
nb = "1.1.0"
panic-semihosting = "0.6.0"

[target.thumbv7em-none-eabihf] # Replace stm32f303xe with your target chip, see next section for more info
runner = "probe-rs run --chip STM32F303RETx"
rustflags = ["-C", "link-arg=-Tlink.x"]

[run]
target = "thumbv7em-none-eabihf"

[build]
target = "thumbv7em-none-eabihf"
